# awstail

./: .gitignore  Cargo.toml
src/: funcs.rs  main.rs
