[package]
name = "awstail"
version = "0.6.8"
authors = ["Yoandy Rodriguez <yoandy.rmartinez@gmail.com>"]
edition = '2018'
homepage = "https://github.com/yorodm/awstail"
repository = "https://github.com/yorodm/awstail"
description = "Like `tail -f` for AWS Logs"
readme = "README.md"
categories = ["command-line-utilities"]
license-file="LICENSE.md"

[dependencies]
gumdrop = "0.8"
chrono ="0.4.6"
humantime = "1.1.1"
console ="0.12"
ctrlc = "3.1.3"
log = "0.4"
env_logger = "0.8.1"
futures = "0.3"
tokio = { version = "1.37.0", features = ["macros", "time", "rt-multi-thread"] }
futures-util = "0.3.5"
anyhow = "1.0"
serde = "1.0.193"
serde_json = "1.0.108"
dirs = "5.0.1"
aws-config = "1.2.0"
aws-sdk-cloudwatchlogs = "1.23.0"
aws-sdk-sts = "1.20.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
